15/01/2024 - 1
==============
SSL supported added to "origin/sslsupport" branch
Bug fixes for SSL & ipv6 changes.
Code cleanup
Bug fixes for several crashes involving SSL and ipv6
Bug fix for DOS prevention failure withe ipv6 address


14/01/2024 - 2
==============
DOS prevention by using remote ip connection threshold.
Added support for IPv6 server listen socket, now http over IPv6 works.


14/01/2024 - 1
==============
Changes to test scripts so that it runs 100*50 wget requests for 7mb static image and p3 plugin post execution
Changes to server to run in static file server mode, where threadmanager, plugins and dynamic pages are disabled, operates like thttpd mode.
Added testloopplugup.sh for multipart form post test
Added testloop3types.sh for multipart form post test
Made changes to shrink logic, hopefully for the better.
Added logic for connection acceptance throttling, required as static files are handled by mainthread and dynamic pages are handled by thread pool cause much havoc.
Added changes to increase open fds rlimit.


13/01/2024 - 3
==============
Cleanup of makefile
Changes to the paths
Changes to makefile , addition of distclean, install, installclean
By default installs to /tmp/httpd/
ServerName+version displayed in logs and http response is github url converted to a string that replaces '/' with '_'
Changes to testloop.sh url so that the test script works properly


13/01/2024 - 2
==============
Cleanup of makefile
Testing pthreads and cpp11threads
Testing with -O2 flag


13/01/2024 - 1
==============
Added support for removal of post temporary file, Should be removed from plugins. Multipart read has to be end-user implementation.
Added support for large file upload through POST multipart.
Changed all the file offset from int to size_t for 64bit support
Code cleanup.


12/01/2024
==========
Added support for heirarchical users
Added support for static htmls 
Added support for static html that's sent if user authentication is valid