@@ -1,3 +1,4 @@
+#Copyright Anoop Kumar Narayanan <anoop.kumar.narayanan@gmail.com> , LICENSE - GPLv2 / GPLv3
 cp /usr/i686-w64-mingw32/sys-root/mingw/bin/libsqlite3-0.dll ../Binaries
 cp /usr/i686-w64-mingw32/sys-root/mingw/bin/libnspr4.dll     ../Binaries
 cp /usr/i686-w64-mingw32/sys-root/mingw/bin/libplc4.dll      ../Binaries
