@@ -1,3 +1,4 @@
+#Copyright Anoop Kumar Narayanan <anoop.kumar.narayanan@gmail.com> , LICENSE - GPLv2 / GPLv3
 INC_DIR=-I./ -I/usr/include -I/usr/local/include
 
 SSL=-DUSE_SSL
