@@ -1,3 +1,4 @@
+#Copyright Anoop Kumar Narayanan <anoop.kumar.narayanan@gmail.com> , LICENSE - GPLv2 / GPLv3
 CXX=g++
 #INC_DIR=-I./ -I./nspr-4.6.4/include/ -I/usr/local/include -I../Encode
 INC_DIR=-I./ -I/usr/include -I/usr/local/include/ -I../
