@@ -1,3 +1,8 @@
+15/01/2024 - 2
+==============
+Adding copyright information 
+
+
 15/01/2024 - 1
 ==============
 SSL supported added to "origin/sslsupport" branch
